--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>I always want to become a software developer, it was my dream which i have achieved. </p>
     <script type="text/javascript" src="./script.js">
 </script>
 
